tests/src/frontend/typechecking/invalid/overridable_const1.sk
base class Foo {
  const x: Int = 42;
}

class Bar() extends Foo {
  const x: Int = 43;
}
